# pqpgp

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  askama.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: crypto_bench.rs
docs/: cryptography.md  forums.md  indexes.md  private-messages.md  relay.md  symmetric-encryption.md
examples/: basic_usage.rs  complete_workflow.rs
site/: index.html
src/: error.rs  lib.rs  main.rs  validation.rs
src/armor/: mod.rs
src/chat/: header.rs  message.rs  mod.rs  prekey.rs  ratchet.rs  session.rs  x3dh.rs
src/cli/: args.rs  commands.rs  mod.rs  utils.rs
src/crypto/: encryption.rs  keys.rs  mod.rs  password.rs  signature.rs  timing.rs
src/dag/: hash.rs  mod.rs  ops.rs
src/forum/: board.rs  client.rs  constants.rs  conversation.rs  dag.rs  dag_ops.rs  edit.rs  encryption_identity.rs  genesis.rs  mod.rs  moderation.rs  permissions.rs  pm_scanner.rs  pm_sealed.rs  post.rs  rpc_client.rs  sealed_message.rs  signed_heads.rs  state.rs  storage.rs  sync.rs  thread.rs  types.rs  validation.rs
src/keyring/: mod.rs
src/packet/: mod.rs
src/rpc/: client.rs  mod.rs  types.rs
src/storage/: mod.rs  rocksdb.rs
src/web/: csrf.rs  main.rs
src/web/templates/: decrypt.html  encrypt.html  index.html  keys.html  sign.html  verify.html  view_public_key.html
tests/: adversarial_tests.rs  forum_e2e_tests.rs  fuzz_tests.rs  integration_tests.rs  property_tests.rs  security_tests.rs  timing_analysis_tests.rs  timing_safe_crypto_tests.rs
