[package]
name = "pqpgp"
version = "0.0.1"
edition = "2021"
authors = ["dihmeetree"]
description = "Post-Quantum secure implementation of PGP in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pqpgp/pqpgp"
keywords = ["cryptography", "post-quantum", "pgp", "encryption", "security"]
categories = ["cryptography", "command-line-utilities"]

[workspace]
members = [".", "bin/web", "bin/relay", "bin/simulator"]
resolver = "2"

[features]
# Enable detailed error messages in debug builds (disabled by default for security)
debug-errors = []

[dependencies]
# Post-quantum cryptography - using maintained implementations
pqcrypto-mlkem = "0.1.1"   # ML-KEM (Module-Lattice-Based Key-Encapsulation Mechanism) implementation
pqcrypto-mldsa = "0.1.2"   # ML-DSA (Module-Lattice-Based Digital Signature Algorithm) implementation
pqcrypto-traits = "0.3.5"  # Common traits for PQC operations

# Traditional cryptography for hybrid approach
aes-gcm = "0.10.3"         # AES-GCM for symmetric encryption
sha3 = "0.10.8"            # SHA3 for quantum-resistant hashing
hkdf = "0.12.4"            # HMAC-based Key Derivation Function
hmac = "0.12.1"            # HMAC for message authentication
rand = "0.9.2"             # Cryptographically secure random number generation
subtle = "2.5"             # Constant-time operations for security
zeroize = { version = "1.8", features = ["derive"] } # Secure memory clearing

# Password-based key derivation
argon2 = "0.5"             # Argon2 for password hashing
rpassword = "7.3"          # Secure password input for CLI

# Serialization and encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"         # JSON serialization (for RPC)
base64 = "0.22"            # Base64 encoding (for RPC)
bincode = "1.3.3"          # Binary serialization
hex = "0.4.3"              # Hexadecimal encoding

# Error handling
thiserror = "2.0"          # Error handling macros

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Database
rocksdb = "0.24"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"         # Property-based testing
pretty_assertions = "1.4.0"
tempfile = "3.24.0"         # Temporary file/directory creation for tests

[[bin]]
name = "pqpgp"
path = "src/main.rs"

[lib]
name = "pqpgp"
path = "src/lib.rs"

[[bench]]
name = "crypto_bench"
harness = false

# Optimized release builds
[profile.release]
lto = true              # Link-Time Optimization - slower builds, faster/smaller binaries
codegen-units = 1       # Better optimization (default is 16 for parallel compilation)
strip = true            # Strip symbols from binary

# Release build with debug symbols for profiling
[profile.release-with-debug]
inherits = "release"
debug = true

# Faster dev builds with some optimization
[profile.dev]
opt-level = 1
debug = true

# Optimize dependencies even in dev builds for faster runtime
[profile.dev.package."*"]
opt-level = 2
